# trimer-flip-montecarlo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
docs/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_8hpp.html  globals_8hpp.js  globals_8hpp_source.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  index.js  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  observables_8hpp.html  observables_8hpp_source.html  particles_8hpp.html  particles_8hpp.js  particles_8hpp_source.html  simulation_8cpp.js  simulation_8hpp.html  simulation_8hpp.js  simulation_8hpp_source.html  structconfiguration-members.html  structconfiguration.html  structconfiguration.js  utils_8cpp.html  utils_8cpp.js  utils_8hpp.html  utils_8hpp.js  utils_8hpp_source.html
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_8hpp.html  globals_8hpp_source.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  index.js  main_8cpp.html  main_8cpp.js  navtreedata.js  navtreeindex0.js  observables_8cpp.html  observables_8cpp.js  observables_8hpp.html  observables_8hpp.js  observables_8hpp_source.html  pages.html  particles_8cpp.html  particles_8cpp.js  particles_8hpp.html  particles_8hpp_source.html  simulation_8cpp.html  simulation_8hpp.html  simulation_8hpp.js  simulation_8hpp_source.html  structconfiguration-members.html  structconfiguration.html  (+4 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js  typedefs_0.js  (+8 more)
docs/latex/: annotated.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  globals_8hpp.tex  globals_8hpp_source.tex  index.tex  md__r_e_a_d_m_e.tex  observables_8hpp.tex  observables_8hpp_source.tex  particles_8hpp.tex  particles_8hpp_source.tex  refman.tex  simulation_8hpp.tex  simulation_8hpp_source.tex  structconfiguration.tex  utils_8hpp.tex  utils_8hpp_source.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_1.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  pages_0.js  searchdata.js  variables_1.js  variables_2.js
include/: globals.hpp  io.hpp  montecarlo.hpp  observables.hpp  particles.hpp  simulation.hpp  utils.hpp
src/: io.cpp  main.cpp  montecarlo.cpp  neighbours.cpp  observables.cpp  particles.cpp  simulation.cpp  swap.h  utils.cpp
tests/: test_main.cpp  test_mutuals.hpp  test_observables.cpp  test_particles.cpp  test_simulation.cpp  test_utils.cpp
tests/config/: initconf.xyz
tests/params/: params_template.json
tests/reference/: cfg_100.xy  cfg_500.xy  obs.txt
